# bmumuMaterials

./: README.md
bmumu/: README.txt  SkimmingAndComparing.sublime-project  SkimmingAndComparing.sublime-workspace  cutBatchBsmumu_copy2020May13.cxx
bmumu/ANA-BPHY-2018-09-INT1/: ANA-BPHY-2018-09-INT1-defs.sty  ANA-BPHY-2018-09-INT1-metadata.tex  ANA-BPHY-2018-09-INT1.aux  ANA-BPHY-2018-09-INT1.bbl  ANA-BPHY-2018-09-INT1.bcf  ANA-BPHY-2018-09-INT1.bib  ANA-BPHY-2018-09-INT1.blg  ANA-BPHY-2018-09-INT1.out  ANA-BPHY-2018-09-INT1.run.xml  ANA-BPHY-2018-09-INT1.tex  ANA-BPHY-2018-09-INT1.toc  InternalNote_AnalysisMethodology.tex  InternalNote_BPlusYield.tex  InternalNote_BackgroundModeling.tex  InternalNote_BranchingRatio.tex  InternalNote_ContinuumBDT.tex  InternalNote_CutFlow.tex  InternalNote_DataMCComparison.tex  InternalNote_EfficiencyAndAcceptance.tex  InternalNote_Introduction.tex  InternalNote_MCTuning.tex  InternalNote_MuonFakes.tex  InternalNote_NoteEvolution.tex  InternalNote_Preselection.tex  InternalNote_Samples.tex  InternalNote_SignalFit.tex  InternalNote_Trigger.tex  Makefile
bmumu/AnalysisTools/: README.md
bmumu/Data/: ApplyWeightsAndCorrections.sublime-workspace  EosDir.txt  Mod3_DataSplitting.cpp  Mod4MC.C  Mod4MC_v2.C  NotesDataCutsJune7.txt  PileupNotes.txt  README.txt  SeparatePileUpSets.C  SeparateRightSideband.cpp  addClassBDT.C  addClassBDT_2016.C  addClassBDT_Run2.C  addClassBDT_Run2_3BDTs.C  addClassBDT_Run2_june15.C  addClassBDT_Run2_v2.cpp  addWeights.C  applyKinematicWeights.C  bdt2012v4QLC_ABDT.weights.xml  bdt2016test_BDT.weights.xml  branchNamesMar26GBR.txt  rocsS1.root  (+1 more)
bmumu/SkimmingFeb2018/AnalysisTools-master/PileupMaps/: CMakeLists.txt
bmumu/SkimmingFeb2018/AnalysisTools-master/PileupMaps/include/: reader.h
bmumu2020/AnalysisTools/BplusFitMacro/: CMakeLists.txt
bmumu2020/AnalysisTools/BplusFitMacro/python/: run.py
bmumu2020/AnalysisTools/BplusFitMacro/source/: bplusUMLFitNoErr.cxx
bmumu2020/AnalysisTools/cpp_read_json/: CMakeLists.txt
bmumu2020/AnalysisTools/cpp_read_json/shared/: grl_2015.json  grl_2016.json
bmumu2020/AnalysisTools/cpp_read_json/src/: json_reader.cxx
files_for_each_topic/: AllVars.txt  BDT.txt  BDTEvaluationStep.txt  BDTmacros.txt  BDTnotesandSyncs.txt  GetBranchNames.txt  IsolationPlots.txt  SepandImp.txt  SkimmingMacros.txt  VarEfficiencies.txt
(+2501 files in other folders)
